split vpc and batch, add stepfunctions

--- a/vpc/template.yaml
+++ b/vpc/template.yaml
@@ -400,85 +400,10 @@ Resources:
               - !Sub "arn:aws:s3:::${AWS::Region}-birdwatcher-prod/*"
               - !Sub "arn:aws:s3:::patch-baseline-snapshot-${AWS::Region}/*"
 
-  #-----------------------------------------------------------------------------
-  # AWS Batch
-  #-----------------------------------------------------------------------------
-  BatchJobDefinition:
-    Type: 'AWS::Batch::JobDefinition'
-    Properties:
-      Type: container
-      PlatformCapabilities:
-        - FARGATE
-      ContainerProperties:
-        ExecutionRoleArn: !GetAtt BatchExecutionRole.Arn
-        FargatePlatformConfiguration:
-          PlatformVersion: LATEST
-        Image: !Sub 137112412989.dkr.ecr.${AWS::Region}.amazonaws.com/amazonlinux:latest
-        Command:
-          - echo
-          - Hello world
-        ResourceRequirements:
-          - Type: MEMORY
-            Value: 512
-          - Type: VCPU
-            Value: 0.25
-      RetryStrategy:
-        Attempts: 1
-
-  BatchExecutionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-        - Effect: Allow
-          Principal:
-            Service:
-            - ecs-tasks.amazonaws.com
-          Action:
-          - sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
-
-  BatchJobQueue:
-    Type: 'AWS::Batch::JobQueue'
-    Properties:
-      Priority: 1
-      ComputeEnvironmentOrder:
-        - Order: 1
-          ComputeEnvironment: !Ref BatchComputeEnvironment
-
-  BatchComputeEnvironment:
-    Type: 'AWS::Batch::ComputeEnvironment'
-    Properties:
-      Type: MANAGED
-      ComputeResources:
-        Type: FARGATE_SPOT
-        MaxvCpus: 4
-        Subnets:
-          - !Ref PrivateSubnet
-        SecurityGroupIds:
-          - !Ref App01SecurityGroup
-      ServiceRole: !GetAtt BatchServiceRole.Arn
-      State: ENABLED
-
-  BatchServiceRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: batch.amazonaws.com
-            Action: 'sts:AssumeRole'
-      ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole'
-
 Outputs:
-  BatchComputeEnvironmentArn:
-    Value: !Ref BatchComputeEnvironment
-  BatchJobQueueArn:
-    Value: !Ref BatchJobQueue
-  BatchJobDefinitionArn:
-    Value: !Ref BatchJobDefinition
+  VpcId:
+    Value: !Ref VPC
+  PrivateSubnetId:
+    Value: !Ref PrivateSubnet
+  App01SecurityGroupId:
+    Value: !Ref App01SecurityGroup
