get secrets from SecretManager

--- a/stepfunctions-batch/template.yaml
+++ b/stepfunctions-batch/template.yaml
@@ -104,12 +104,15 @@ Resources:
         Command:
           - "sh"
           - "-c"
-          - "echo Hello world $PARAM_TEST"
+          - "echo Hello world $PARAM_TEST $SECRET_TEST"
         ResourceRequirements:
           - Type: MEMORY
             Value: 512
           - Type: VCPU
             Value: 0.25
+        Secrets:
+          - Name: SECRET_TEST
+            ValueFrom: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:test/secrettest:testkey
       RetryStrategy:
         Attempts: 1
 
@@ -162,6 +165,17 @@ Resources:
             Action: 'sts:AssumeRole'
       ManagedPolicyArns:
         - 'arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole'
+      Path: /
+      Policies:
+        - PolicyName: secretmanager
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - secretsmanager:GetSecretValue
+                Resource:
+                  - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:test/secrettest
 
   BatchSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
