Specifying sensitive data to AWS Batch using Secrets Manager

--- a/stepfunctions-batch/template.yaml
+++ b/stepfunctions-batch/template.yaml
@@ -112,7 +112,7 @@ Resources:
             Value: 0.25
         Secrets:
           - Name: SECRET_TEST
-            ValueFrom: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:test/secrettest:testkey
+            ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:test/secrettest-xuWA9r:testkey::"
       RetryStrategy:
         Attempts: 1
 
@@ -130,6 +130,17 @@ Resources:
             - sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+      Path: /
+      Policies:
+        - PolicyName: secretmanager
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - secretsmanager:GetSecretValue
+                Resource:
+                  - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:test/secrettest-xuWA9r
 
   BatchJobQueue:
     Type: 'AWS::Batch::JobQueue'
@@ -165,17 +176,6 @@ Resources:
             Action: 'sts:AssumeRole'
       ManagedPolicyArns:
         - 'arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole'
-      Path: /
-      Policies:
-        - PolicyName: secretmanager
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - secretsmanager:GetSecretValue
-                Resource:
-                  - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:test/secrettest
 
   BatchSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
