add deploy.sh and delete.sh

--- a/batch-from-step-functions/statemachine/batch.asl.yaml
+++ b/batch-from-step-functions/statemachine/batch.asl.yaml
@@ -13,6 +13,9 @@ States:
         Environment:
           - Name: PARAM_TEST
             Value: "AWS Batch test!"
+    InputPath: $
+    ResultPath: $.BatchResult
+    OutputPath: $
     Retry:
       - ErrorEquals:
           - Batch.TooManyRequestsException
