--- a/batch-from-step-functions/template.yaml
+++ b/batch-from-step-functions/template.yaml
@@ -113,8 +113,8 @@ Resources:
         Secrets:
           - Name: SECRET_TEST
             ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:test/secrettest-xuWA9r:testkey::"
-      RetryStrategy:
-        Attempts: 1
+      # RetryStrategy:
+      #   Attempts: 1
 
   BatchExecutionRole:
     Type: AWS::IAM::Role
