--- a/vpc-for-aws-batch/template.yaml
+++ b/vpc-for-aws-batch/template.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
   vpc for ecs and batch
@@ -7,51 +7,53 @@ Parameters:
     Description: Environment Name
     Type: String
     Default: dev
-    AllowedValues: 
+    AllowedValues:
       - dev
       - prd
-  AZ:
-    Type: String
-    Default: ap-northeast
-    Description: Tokyo
-  Zone:
-    Type: String
-    Default: 1a
-    Description: 1a or 1c or 1d
   VpcCidr:
     Description: First and Second Octet of VPC, For example (10.0/172.16/192.168)
     Type: String
-    Default: 192.168
+    Default: 172.21
     AllowedPattern: "^(10\\.([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])|172\\.(1[6-9]|2[0-9]|3[0-1])|192\\.168)$"
     ConstraintDescription: xxx.xxx
   Ec2ImageIdAmzn2:
     Type: AWS::SSM::Parameter::Value<String>
     Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
   Ec2ImageIdWindows:
-    Type : AWS::SSM::Parameter::Value<String>
-    Default: /aws/service/ami-windows-latest/Windows_Server-2016-Japanese-Full-Base  
+    Type: AWS::SSM::Parameter::Value<String>
+    Default: /aws/service/ami-windows-latest/Windows_Server-2016-Japanese-Full-Base
   BastionHostKeyPair:
-    Description : 'Name of an existing EC2 KeyPair to enable SSH access to the instance'
+    Description: "Name of an existing EC2 KeyPair to enable SSH access to the instance"
     Type: AWS::EC2::KeyPair::KeyName
     Default: ssm_key
-    ConstraintDescription : 'Can contain only ASCII characters.'
-  EnableNATGateway: 
-    Default: true
+    ConstraintDescription: "Can contain only ASCII characters."
+  EnableNATGateway:
+    Default: "false"
     Type: String
     AllowedValues: [true, false]
 
-Conditions: 
-  EnableNATGateway: !Equals [ !Ref EnableNATGateway, true ]
+Conditions:
+  EnableNATGateway: !Equals [!Ref EnableNATGateway, true]
 
 Mappings:
   VpcConfig:
     dev:
-      VPC             : .0.0/16
-      PublicSubnet    : .0.0/24
-      PrivateSubnet   : .10.0/24
+      VPC: .0.0/16
+      PublicSubnet: .0.0/22
+      PrivateSubnet: .4.0/22
+      PrivateSubnet2: .8.0/22
+      PrivateSubnet3: .12.0/22
+      PrivateSubnet4: .16.0/22
       # BastionInstance : .0.10
-      App01Instance   : .10.10
-      App02Instance   : .10.11
+      App01Instance: .4.10
+      App02Instance: .4.11
+  SubnetAZ:
+    dev:
+      PublicSubnet: a
+      PrivateSubnet: a
+      PrivateSubnet2: c
+      PrivateSubnet3: d
+      PrivateSubnet4: a
 
 Resources:
   #-----------------------------------------------------------------------------
@@ -60,7 +62,11 @@ Resources:
   VPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: !Sub [ "${VpcCidr}${Subnet}", { Subnet: !FindInMap [ VpcConfig, !Ref Env, VPC ]}]
+      CidrBlock:
+        !Sub [
+          "${VpcCidr}${Subnet}",
+          { Subnet: !FindInMap [VpcConfig, !Ref Env, VPC] },
+        ]
       EnableDnsSupport: true
       EnableDnsHostnames: true
       InstanceTenancy: default
@@ -109,9 +115,17 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Join ["-", [!Ref AZ, !Ref Zone]]
+      AvailabilityZone:
+        !Sub [
+          "${AWS::Region}${AZ}",
+          { AZ: !FindInMap [SubnetAZ, !Ref Env, PublicSubnet] },
+        ]
       MapPublicIpOnLaunch: true
-      CidrBlock: !Sub [ "${VpcCidr}${Subnet}", { Subnet: !FindInMap [ VpcConfig, !Ref Env, PublicSubnet ]}]
+      CidrBlock:
+        !Sub [
+          "${VpcCidr}${Subnet}",
+          { Subnet: !FindInMap [VpcConfig, !Ref Env, PublicSubnet] },
+        ]
       Tags:
         - Key: Name
           Value: !Sub "${AWS::StackName}-public-subnet"
@@ -140,16 +154,96 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Join ["-", [!Ref AZ, !Ref Zone]]
-      CidrBlock: !Sub [ "${VpcCidr}${Subnet}", { Subnet: !FindInMap [ VpcConfig, !Ref Env, PrivateSubnet ]}]
+      AvailabilityZone:
+        !Sub [
+          "${AWS::Region}${AZ}",
+          { AZ: !FindInMap [SubnetAZ, !Ref Env, PrivateSubnet] },
+        ]
+      CidrBlock:
+        !Sub [
+          "${VpcCidr}${Subnet}",
+          { Subnet: !FindInMap [VpcConfig, !Ref Env, PrivateSubnet] },
+        ]
       Tags:
         - Key: Name
           Value: !Sub "${AWS::StackName}-private-subnet"
+
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone:
+        !Sub [
+          "${AWS::Region}${AZ}",
+          { AZ: !FindInMap [SubnetAZ, !Ref Env, PrivateSubnet2] },
+        ]
+      CidrBlock:
+        !Sub [
+          "${VpcCidr}${Subnet}",
+          { Subnet: !FindInMap [VpcConfig, !Ref Env, PrivateSubnet2] },
+        ]
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-private-subnet2"
+
+  PrivateSubnet3:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone:
+        !Sub [
+          "${AWS::Region}${AZ}",
+          { AZ: !FindInMap [SubnetAZ, !Ref Env, PrivateSubnet3] },
+        ]
+      CidrBlock:
+        !Sub [
+          "${VpcCidr}${Subnet}",
+          { Subnet: !FindInMap [VpcConfig, !Ref Env, PrivateSubnet3] },
+        ]
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-private-subnet3"
+
+  PrivateSubnet4:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone:
+        !Sub [
+          "${AWS::Region}${AZ}",
+          { AZ: !FindInMap [SubnetAZ, !Ref Env, PrivateSubnet4] },
+        ]
+      CidrBlock:
+        !Sub [
+          "${VpcCidr}${Subnet}",
+          { Subnet: !FindInMap [VpcConfig, !Ref Env, PrivateSubnet4] },
+        ]
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-private-subnet4"
 
   PrivateSubnetRouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PrivateSubnet
+      RouteTableId: !Ref PrivateRouteTable
+
+  PrivateSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
+      RouteTableId: !Ref PrivateRouteTable
+
+  PrivateSubnet3RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet3
+      RouteTableId: !Ref PrivateRouteTable
+
+  PrivateSubnet4RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet4
       RouteTableId: !Ref PrivateRouteTable
 
   #-----------------------------------------------------------------------------
@@ -194,7 +288,7 @@ Resources:
         - !Ref PrivateRouteTable
 
   EndpointSecurityGroup:
-    Type: 'AWS::EC2::SecurityGroup'
+    Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupName: Endpoint Security Group
       GroupDescription: Enable SSM Session to the Linux instance
@@ -203,7 +297,11 @@ Resources:
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-          CidrIp: !Sub [ "${VpcCidr}${Subnet}", { Subnet: !FindInMap [ VpcConfig, !Ref Env, VPC ]}]
+          CidrIp:
+            !Sub [
+              "${VpcCidr}${Subnet}",
+              { Subnet: !FindInMap [VpcConfig, !Ref Env, VPC] },
+            ]
 
   # EC2MessageEndpoint:
   #   Type: AWS::EC2::VPCEndpoint
@@ -262,6 +360,8 @@ Resources:
       VpcId: !Ref VPC
       SubnetIds:
         - !Ref PrivateSubnet
+        - !Ref PrivateSubnet2
+        - !Ref PrivateSubnet3
       SecurityGroupIds:
         - !Ref EndpointSecurityGroup
 
@@ -276,6 +376,8 @@ Resources:
       VpcId: !Ref VPC
       SubnetIds:
         - !Ref PrivateSubnet
+        - !Ref PrivateSubnet2
+        - !Ref PrivateSubnet3
       SecurityGroupIds:
         - !Ref EndpointSecurityGroup
 
@@ -291,6 +393,8 @@ Resources:
       VpcId: !Ref VPC
       SubnetIds:
         - !Ref PrivateSubnet
+        - !Ref PrivateSubnet2
+        - !Ref PrivateSubnet3
       SecurityGroupIds:
         - !Ref EndpointSecurityGroup
 
@@ -303,6 +407,8 @@ Resources:
       VpcId: !Ref VPC
       SubnetIds:
         - !Ref PrivateSubnet
+        - !Ref PrivateSubnet2
+        - !Ref PrivateSubnet3
       SecurityGroupIds:
         - !Ref EndpointSecurityGroup
 
@@ -358,14 +464,14 @@ Resources:
   #     InstanceType: t3.nano
   #     KeyName: !Ref BastionHostKeyPair
   #     IamInstanceProfile: !Ref EC2IamInstanceProfile
-  #     NetworkInterfaces: 
+  #     NetworkInterfaces:
   #       - SubnetId: !Ref PrivateSubnet
   #         PrivateIpAddress: !Sub [ "${VpcCidr}${Ip}", { Ip: !FindInMap [ VpcConfig, !Ref Env, App02Instance ]}]
-  #         GroupSet: 
+  #         GroupSet:
   #           - !Ref App02SecurityGroup
   #         AssociatePublicIpAddress: false
   #         DeviceIndex: 0
-  #     CreditSpecification: 
+  #     CreditSpecification:
   #       CPUCredits: standard
   #     Tags:
   #       - Key: Name
@@ -421,8 +527,20 @@ Outputs:
   VpcId:
     Value: !Ref VPC
     Export:
-      Name : !Sub ${AWS::StackName}-VpcId
+      Name: !Sub ${AWS::StackName}-VpcId
   PrivateSubnetId:
     Value: !Ref PrivateSubnet
     Export:
-      Name : !Sub ${AWS::StackName}-PrivateSubnetId
+      Name: !Sub ${AWS::StackName}-PrivateSubnetId
+  PrivateSubnet2Id:
+    Value: !Ref PrivateSubnet2
+    Export:
+      Name: !Sub ${AWS::StackName}-PrivateSubnet2Id
+  PrivateSubnet3Id:
+    Value: !Ref PrivateSubnet3
+    Export:
+      Name: !Sub ${AWS::StackName}-PrivateSubnet3Id
+  PrivateSubnet4Id:
+    Value: !Ref PrivateSubnet4
+    Export:
+      Name: !Sub ${AWS::StackName}-PrivateSubnet4Id
